add google verfy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <META name="author" content="kenrome">
+  <meta name="google-site-verification" content="1HjZDbC34huOkYQsEcrYuS_ImKp5Ga8UL5cCFwjrSLk" />
   <META name="keywords" content="ruby,ruby on rails,web,web design,web development,web app,cloud computing">
   <META name="description" content="网站建设,网站开发,云端网站服务专家">
     <title>inruby: <%= controller.controller_name %>,<%= controller.action_name %></title>
