--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,10 +1,12 @@
+<% title t("menu.contact") %>
 <div id="features">
 <h3><%= t "about.t6" %></h3>
     <p><%= t "about.us" %> </p><br/>
     <div class=""><%= t "about.addr" %> </div>
-    <p><br/>
-    <a target="_blank" href="mailto:kenrome@gmail.com">kenrome@gmail.com </a><br />
-    <a href="http://www.inruby.com">www.inruby.com</a></p><br/>
+    <p>
+    <h2>Email:</h2>
+    &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="mailto:kenrome@gmail.com">kenrome@gmail.com </a><br />
+    &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="mailto:tom_123345@163.com">tom_123345@163.com </a></p><br/>
     <DIV class="box mb10 tips">
           <H2 class="out"><%= t "about.t6" %> </H2>
         <DIV class="in">
