--- a/app/views/welcome/help.html.erb
+++ b/app/views/welcome/help.html.erb
@@ -1,3 +1,4 @@
+<% title t("menu.help") %>
 <div id="container">
   <div id="features">
     <p style="margin:0 0 0 80; line-height:22px;float:right;">
