--- a/app/views/welcome/service.html.erb
+++ b/app/views/welcome/service.html.erb
@@ -1,3 +1,4 @@
+<% title t("menu.service") %>
 <DIV id="content">
   <DIV id="banner2">
     <h2><font face="Arial, Helvetica, sans-serif"><%=t "banner.title2"%></font></h2>
