--- a/app/views/layouts/_top.html.erb
+++ b/app/views/layouts/_top.html.erb
@@ -2,8 +2,8 @@
   <A href="/" class="a_logo" title="红宝石软件">红宝石网络</A>
 <DIV id="sub-nav">
   <% form_tag '' do %>
-   选择语言：<%= select_tag("locale", options_for_select(LOCALES_AVAILABLE, I18n.locale), { :index => nil, :onchange => 'this.form.submit()'}) %>
-  <A HREF="#"> <IMG SRC="http://api.hostip.info/flag.php" ALT="choose language" height="18px"></A>
+   <%= t "banner.choose" %>：<%= select_tag("locale", options_for_select(LOCALES_AVAILABLE, I18n.locale), { :index => nil, :onchange => 'this.form.submit()'}) %>
+  
 <% end %>
   <A href="/help" target="_blank"><%=  t "menu.help"%></A> | <A href="/sitemap"><%= t "menu.sitemap" %></A> | <A href="/contact"><%= t "menu.contact" %></A>
 </DIV>
