--- a/app/views/welcome/help.html.erb
+++ b/app/views/welcome/help.html.erb
@@ -6,10 +6,10 @@
     </p><a name="a"></a>
     <h3>如何协作开发项目 | How do we collaborate</h3>
 
-    <p><img src="images/PROJECT_flow.png" alt="project flow" /></p> <a name="b"></a>
+    <p><img src="images/pro_flow.png" alt="project flow" /></p> <a name="b"></a>
     <h3> 如何实现项目计划 | How do we achieve the project plan</h3>
     
-    <p><img src="images/PROJECT_PLANNER.png" alt="project planner" /></p>
+    <p><img src="images/pro_planner.png" alt="project planner" /></p>
 
     <!-- end #mainContent --></div>
   <!-- end #container --></div>
