--- a/app/views/gnotes/show.html.erb
+++ b/app/views/gnotes/show.html.erb
@@ -1,3 +1,4 @@
+<div style=" background-color: #ffffff;">
 <% title @gnote.contact %>
 <br/>
 <div class="g_title"><%=h @gnote.contact %></div>
@@ -12,4 +13,5 @@
 
 <div id="g_message" class="g_message">
   <%= @gnote.message %>
+</div>
 </div>
