--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,4 +1,4 @@
-<% title t("menu.contact") %>
+<% title t("menu.contact") %><DIV style=" background-color: #ffffff;">
 <div id="features">
 <h3><%= t "about.t6" %></h3>
     <p><%= t "about.us" %> </p><br/>
@@ -15,4 +15,4 @@
           </DIV>
         </DIV>
         </DIV>
-</div>
+</div></div>
