--- a/app/views/welcome/help.html.erb
+++ b/app/views/welcome/help.html.erb
@@ -1,4 +1,4 @@
-<% title t("menu.help") %>
+<% title t("menu.help") %><DIV style=" background-color: #ffffff;">
 <div id="container">
   <div id="features">
     <p style="margin:0 0 0 80; line-height:22px;float:right;">
@@ -12,4 +12,4 @@
     <p><img src="images/pro_planner.png" alt="project planner" /></p>
 
     <!-- end #mainContent --></div>
-  <!-- end #container --></div>
+  <!-- end #container --></div></div>
