--- a/app/views/gnotes/new.html.erb
+++ b/app/views/gnotes/new.html.erb
@@ -1,4 +1,4 @@
-<% title "new blog|添加博客" %>
+<% title "new blog|添加博客" %><div style=" background-color: #ffffff;">
 <h1>新加文章/链接/留言/或者。。。</h1>
 <%= javascript_include_tag :fckeditor %>
 
@@ -7,4 +7,4 @@
   <%= render :partial=>'form',:locals=>{:f=>f} %>
 <% end %>
 
-<%= link_to '返回', gnotes_path %>
+<%= link_to '返回', gnotes_path %></div>
