--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,5 +1,5 @@
 <% title t("menu.about") %>
-<DIV id="content">
+<DIV id="content" style=" background-color: #ffffff;">
   <DIV id="banner2">
     <h2><font face="Arial, Helvetica, sans-serif"><%= t "banner.title2"%> </font></h2>
   </DIV>
