--- a/public/stylesheets/globe.css
+++ b/public/stylesheets/globe.css
@@ -24,10 +24,10 @@ a:hover{ text-decoration:underline;}
 			#banner h3 span{ width:73px; height:74px; display:block; position:absolute; left:210px; top:-23px; background:url(bg_banner_btn_free_100208.png) 0 0 no-repeat; text-indent:-999em;}
 		#slogan{ width:300px; position:absolute; left:50px; top:100px;}
 			#slogan li{ width:224px; font-size:20px; height:24px; line-height:20px; padding:0 0 0 36px; margin:0 0 6px 0; float:left; color:#fff;}
-        	#stitle{width:900px;position:absolute;font-size:4em;left:50px;top:40px;font-family: Arial, Helvetica, sans-serif, "Î¢ÈíÑÅºÚ", "ºÚÌå";font-weight: bolder;color: #fff;}
+        	#stitle{width:900px;height:180px;position:absolute;font-size:3em;line-height:40px;left:50px;top:40px;font-family: Arial, Helvetica, sans-serif, "Î¢ï¿½ï¿½ï¿½Åºï¿½", "ï¿½ï¿½ï¿½ï¿½";font-weight: bolder;color: #fff;}
 	/* second Page Index*/
-	#banner2{ height:80px; background:url(bg_banner_100208.jpg) no-repeat; position:relative;}
-		#banner2 h2{width:900px;position:absolute;font-size:4em;left:50px;top:40px;font-family: Arial, Helvetica, sans-serif, "Î¢ÈíÑÅºÚ", "ºÚÌå";font-weight: bolder;color: #fff;}
+	#banner2{ height:100px; background:url(bg_banner_100208.jpg) no-repeat; position:relative;}
+		#banner2 h2{width:900px;position:absolute;font-size:3em;line-height:40px;left:50px;top:40px;font-family: Arial, Helvetica, sans-serif, "Î¢ï¿½ï¿½ï¿½Åºï¿½", "ï¿½ï¿½ï¿½ï¿½";font-weight: bolder;color: #fff;}
 			
 	#main-content{ margin:20px 0 0 0;}
 		#features{ margin:0 0 30px 0;}
