--- a/app/views/welcome/service.html.erb
+++ b/app/views/welcome/service.html.erb
@@ -11,37 +11,37 @@
         <DIV style="padding:20px 16px;float:left;">
           <DIV id="site_17">
             <DIV id="redbox_17" style="display:none;"></DIV>
-            <A href="http://www.aa-visa.com" onclick="ne;"><IMG alt="Ruby dev BBS" width="122px" src="images/portfolio/3.gif"></A>
+            <A href="http://www.aa-visa.com"><IMG alt="Ruby dev BBS" width="122px" src="images/portfolio/3.gif"></A>
           </DIV>
         </DIV>
         <DIV style="padding:20px 16px;float:left;">
           <DIV id="site_17">
             <DIV id="redbox_17" style="display:none;"></DIV>
-            <A href="#" onclick="ne;"><IMG alt="Warren Rentals" width="122px" src="images/portfolio/4.gif"></A>
+            <A href="#"><IMG alt="Warren Rentals" width="122px" src="images/portfolio/4.gif"></A>
           </DIV>
         </DIV>
         <DIV style="padding:20px 16px;float:left;">
           <DIV id="site_17">
             <DIV id="redbox_17" style="display:none;"></DIV>
-            <A href="#" onclick="ne;"><IMG alt="Warren Rentals" src="images/portfolio/5.gif"></A>
+            <A href="#"><IMG alt="Warren Rentals" src="images/portfolio/5.gif"></A>
           </DIV>
         </DIV>
         <DIV style="padding:20px 16px;float:left;">
           <DIV id="site_17">
             <DIV id="redbox_17" style="display:none;"></DIV>
-            <A href="#" onclick="ne;"><IMG alt="Warren Rentals" src="images/portfolio/6.gif"></A>
+            <A href="#"><IMG alt="Warren Rentals" src="images/portfolio/6.gif"></A>
           </DIV>
         </DIV>
         <DIV style="padding:20px 16px;float:left;">
           <DIV id="site_17">
             <DIV id="redbox_17" style="display:none;"></DIV>
-            <A href="#" onclick="neurn false;"><IMG alt="aa-visa" width="122px" src="images/portfolio/1.gif"></A>
+            <A href="#"><IMG alt="aa-visa" width="122px" src="images/portfolio/1.gif"></A>
           </DIV>
         </DIV>
         <DIV style="padding:20px 16px;float:left;">
           <DIV id="site_17">
             <DIV id="redbox_17" style="display:none;"></DIV>
-            <A href="#" onclick="newn false;"><IMG alt="Warren Rentals" src="images/portfolio/2.gif"></A>
+            <A href="#"><IMG alt="Warren Rentals" src="images/portfolio/2.gif"></A>
           </DIV>
         </DIV>
       </div>
@@ -54,5 +54,5 @@
       <p> <%= t "service.s2" %></p>
     </DIV>
     <!--main end 3-->
-<%= render :partial=>"layouts/advantage" %>
+    <%= render :partial=>"layouts/advantage" %>
   </DIV>
