--- a/app/views/gnotes/new.html.erb
+++ b/app/views/gnotes/new.html.erb
@@ -1,5 +1,5 @@
 <% title "new blog|添加博客" %><div style=" background-color: #ffffff;">
-<h1>新加文章/链接/留言/或者。。。</h1>
+<h1>新加文章/链接/留言/或者。。。<a href="/admin">返回管理菜单</a></h1>
 <%= javascript_include_tag :fckeditor %>
 
 <% form_for(@gnote) do |f| %>
