--- a/app/views/layouts/_top.html.erb
+++ b/app/views/layouts/_top.html.erb
@@ -1,22 +1,29 @@
 <DIV class="logo">
   <A href="/" class="a_logo" title="红宝石软件">红宝石网络</A>
-<DIV id="sub-nav">
-  <% form_tag '' do %>
-   <%= t "banner.choose" %>：<%= select_tag("locale", options_for_select(LOCALES_AVAILABLE, I18n.locale), { :index => nil, :onchange => 'this.form.submit()'}) %>
-  
-<% end %>
-  <A href="/help" target="_blank"><%=  t "menu.help"%></A> | <A href="/sitemap"><%= t "menu.sitemap" %></A> | <A href="/contact"><%= t "menu.contact" %></A>
-</DIV>
+  <DIV id="sub-nav">
+    <% form_tag '' do %>
+      <%= t "banner.choose" %>：<%= select_tag("locale", options_for_select(LOCALES_AVAILABLE, I18n.locale), { :index => nil, :onchange => 'this.form.submit()'}) %>
 
-<DIV class="webnav">
-    	<UL class="mainwebnav">
-            <LI><A href="/" <%="class='navind'" if (controller.controller_name=='welcome' and controller.action_name == 'index')%>><%=t "menu.index"%></A></LI>
-            <LI><A href="/service"  <%="class='navind'" unless controller.action_name != 'service'%>><%=t "menu.service"%></A></LI>
-            <LI><A href="/about"  <%="class='navind'" unless controller.action_name != 'about'%>><%=t "menu.about"%></A></LI>
-            <LI><A href="/gnotes" <%="class='navind'" unless controller.controller_name != 'gnotes'%>><%=t "menu.blog"%></A></LI>
-    	</UL>
-    	<UL class="submenu">
-            <LI class="feedback"><A href="/signup" class="a_white"><%=t "menu.signup"%></A></LI>
-    	    <LI class="service"><A href="/login" class="a_white"><%=t "menu.login"%></A></LI>
-    	</UL>
-</DIV>
+    <% end %>
+    <A href="/help" target="_blank"><%=  t "menu.help"%></A> | <A href="/sitemap"><%= t "menu.sitemap" %></A> | <A href="/contact"><%= t "menu.contact" %></A>
+  </DIV>
+
+  <DIV class="webnav">
+    <UL class="mainwebnav">
+      <LI><A href="/" <%="class='navind'" if (controller.controller_name=='welcome' and controller.action_name == 'index')%>><%=t "menu.index"%></A></LI>
+      <LI><A href="/service"  <%="class='navind'" unless controller.action_name != 'service'%>><%=t "menu.service"%></A></LI>
+      <LI><A href="/about"  <%="class='navind'" unless controller.action_name != 'about'%>><%=t "menu.about"%></A></LI>
+      <LI><A href="/gnotes" <%="class='navind'" unless controller.controller_name != 'gnotes'%>><%=t "menu.blog"%></A></LI>
+    </UL>
+    <UL class="submenu">
+      <LI class="feedback"><A href="/signup" class="a_white"><%=t "menu.signup"%></A></LI>
+      <LI class="service">
+        <% if logged_in? -%>
+            <%= link_to current_user.login,"#" -%>
+            <%= link_to t('menu.logout'), logout_path, { :title => t('menu.logout')} -%>
+        <% else -%>
+          <A href="/login" class="a_white"><%=t "menu.login"%></A>
+        <%end%>
+      </LI>
+    </UL>
+  </DIV>
