--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<% title "user signup" %><DIV id="content" style=" background-color: #ffffff;">
+<% title "user signup" %><div id="content" style=" background-color: #ffffff;">
 <%= error_messages_for :user %>
 <% form_for :user, :url => users_path do |f| -%>
 <p><label for="login"><%= t 'activerecord.models.attributes.user.login' %> </label><br/>
