--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
-<% title "user signup" %><div id="content" style=" background-color: #ffffff;">
+<% title "user signup" %><div id="acontent" style=" background-color: #ffffff;">
+  <div id="main-content">
 <%= error_messages_for :user %>
 <% form_for :user, :url => users_path do |f| -%>
 <p><label for="login"><%= t 'activerecord.models.attributes.user.login' %> </label><br/>
@@ -25,4 +26,4 @@
 </fieldset>
 <p><%= submit_tag t('form.sign_up') %></p>
 <% end -%>
-</div>
+</div></div>
