--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,19 @@
   <%= stylesheet_link_tag 'gnote' if controller.controller_name =='gnotes'%>
   <LINK rel="Shortcut Icon" href="images/favicon.ico">
   <LINK rel="Bookmark" href="images/favicon.ico">
+  <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-10508960-3']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 <body  id="page_index" class="mqq-page-01">
 <%= render :partial=>'layouts/top' %>
