--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,5 +32,7 @@
 <%= yield %>
 
 <%= render :partial=>'layouts/footer' %>
+
+<SCRIPT LANGUAGE="JavaScript" src="http://float2006.tq.cn/floatcard?adminid=8970949&sort=0"></SCRIPT>
 </body>
 </html>
