--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,10 +29,11 @@
 <%= render :partial=>'layouts/top' %>
 
 <%= yield %>
-
+<a href='/contact'>
 <div id="contact_us" style="margin:0 auto;text-algn:center;background-color:#8B0000;">
 <a href='/contact'><img src='/images/contact_us.jpg' width='100px'/></a>
 </div>
+</a>
 <%= render :partial=>'layouts/footer' %>
 </body>
 </html>
